# uniform_bspline_ceres

./: CMakeLists.txt  CODEOWNERS  Doxyfile  README.md  package.xml
doc/: README_doxygen.md  bspline_drawings.nb  generator_example.nb
include/uniform_bspline_ceres/: fixed_size_container_type_trait_ceres.hpp  uniform_bspline_ceres.hpp  uniform_bspline_ceres_evaluator.hpp  uniform_bspline_ceres_generator.hpp  value_type_trait_ceres.hpp
include/uniform_bspline_ceres/internal/: autodiff_smoothing_type.hpp  no_discard.hpp  smoothness_cost_functor.hpp  uniform_bspline_ceres_evaluator_impl.hpp  uniform_bspline_ceres_impl.hpp
scripts/: generate_readme_md
test/: benchmark.cpp  evaluator.cpp  evaluator_example.cpp  evaluator_optimization.cpp  generator.cpp  generator_example.cpp  generator_spline_autodiff.cpp  smoothness.cpp  smoothness_prior.cpp  test_helper.hpp
